--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:libs:affected": "node ./scripts/libs-test.js libs",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "apps:affected": "node ./node_modules/@nrwl/schematics/src/affected/run-affected.js apps",
     "libs:affected": "node ./scripts/libs-affected.js libs",
     "build:affected": "node ./node_modules/@nrwl/schematics/src/affected/run-affected.js build",
+    "build:libs:affected": "node ./scripts/libs-build.js build",
     "e2e:affected": "node ./node_modules/@nrwl/schematics/src/affected/run-affected.js e2e",
     "format": "node ./node_modules/prettier/bin/prettier.js --single-quote --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "nx-migrate": "node ./node_modules/@nrwl/schematics/src/migrator/migrator.js"
+    "nx-migrate": "node ./node_modules/@nrwl/schematics/src/migrator/migrator.js",
+    "prerelease": "lerna publish --skip-npm",
+    "release": "node ./scripts/libs-publish.js"
   },
   "private": true,
   "dependencies": {
@@ -26,20 +30,20 @@
     "@angular/platform-browser": "5.1.0",
     "@angular/platform-browser-dynamic": "5.1.0",
     "@angular/router": "5.1.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "@nrwl/nx": "0.6.0",
     "@ngrx/effects": "4.1.1",
     "@ngrx/router-store": "4.1.1",
     "@ngrx/store": "4.1.1",
-    "@ngrx/store-devtools": "4.0.0"
+    "@ngrx/store-devtools": "4.0.0",
+    "@nrwl/nx": "0.6.0",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "file:.angular_cli.tgz",
     "@angular/compiler-cli": "5.1.0",
     "@angular/language-service": "5.1.0",
-    "@nrwl/schematics": "0.6.0",
+    "@nrwl/schematics": "^0.6.13",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -53,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lerna": "^2.7.1",
     "ng-packagr": "^1.6.0",
     "prettier": "^1.9.0",
     "protractor": "~5.1.2",
